Update for 20w17a -- we are RGB
Hover events only kind of work at the moment

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,9 @@
 versionAdventure=4.0.0-SNAPSHOT
-versionMinecraft=1.15.2
-versionMappings=9
-versionLoader=0.7.8+build.189
-versionFabricApi=0.1.2+b7f9825d30
+versionMinecraft=20w17a
+versionMappings=1
+versionLoader=0.8.2+build.194
+versionFabricApiBase=0.1.3+12a8474cad
+versionFabricApiCommands=0.1.5+2fd224ca34
 
 org.gradle.jvmargs=-Xmx1G
 org.gradle.caching=true
