--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ versionAdventure=4.0.0-SNAPSHOT
 versionMinecraft=20w22a
 versionMappings=1
 versionLoader=0.8.4+build.198
+versionFabricApi=0.11.2+build.351-1.16
 
 org.gradle.jvmargs=-Xmx1G
 org.gradle.caching=true
