--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 versionAdventure=4.0.0-SNAPSHOT
-versionMinecraft=20w22a
-versionMappings=10
-versionLoader=0.8.4+build.198
-versionFabricApi=0.11.2+build.351-1.16
+versionMinecraft=1.16-pre1
+versionMappings=1
+versionLoader=0.8.7+build.201
+versionFabricApi=0.11.4+build.353-1.16
 
 org.gradle.jvmargs=-Xmx1G
 org.gradle.caching=true
