--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,9 @@
 versionAdventure=4.0.0-SNAPSHOT
-versionMinecraft=1.16-pre4
-versionMappings=1
+versionMinecraft=1.16-pre6
+versionMappings=3
 versionLoader=0.8.7+build.201
-versionFabricApi=0.11.10+build.359-1.16
+versionFabricApi=0.12.3+build.363-1.16
 
 org.gradle.jvmargs=-Xmx1G
 org.gradle.caching=true
+org.gradle.parallel=true
