--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 versionAdventure=4.0.0-SNAPSHOT
-versionMinecraft=1.16-pre6
-versionMappings=3
-versionLoader=0.8.7+build.201
-versionFabricApi=0.12.3+build.363-1.16
+versionMinecraft=1.16
+versionMappings=1
+versionLoader=0.8.8+build.202
+versionFabricApi=0.13.1+build.370-1.16
 
 org.gradle.jvmargs=-Xmx1G
 org.gradle.caching=true
