--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,5 +16,11 @@ jobs:
         uses: "actions/setup-java@v1"
         with:
           java-version: "${{ matrix.java }}"
+      - name: Cache Gradle packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-${{matrix.java}}-gradle-${{ hashFiles('**/*.gradle') }}
+          restore-keys: ${{ runner.os }}-${{matrix.java}}-gradle
       - name: "build"
         run: "./gradlew build --stacktrace"
