--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,9 @@
-versionAdventure=4.0.0-SNAPSHOT
+versionAdventure=4.1.1
+versionAdventurePlatform=4.0.0-SNAPSHOT
+versionAdventurePagination=4.0.0-SNAPSHOT
 versionMinecraft=1.16.3
-versionLoader=0.9.3+build.207
-versionFabricApi=0.21.0+build.407-1.16
+versionLoader=0.10.1+build.209
+versionFabricApi=0.24.0+build.411-1.16
 
 org.gradle.jvmargs=-Xmx1G
 org.gradle.caching=true
