--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 versionAdventure=4.7.0
 versionAdventurePlatform=4.0.0-SNAPSHOT
 versionAdventurePagination=4.0.0-SNAPSHOT
-versionMinecraft=1.16.5
-versionLoader=0.11.1
-versionFabricApi=0.30.0+1.16
+versionMinecraft=21w19a
+versionLoader=0.11.3
+versionFabricApi=0.34.4+1.17
 
 org.gradle.jvmargs=-Xmx1G
 org.gradle.caching=true
