--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
-versionAdventure=4.1.1
+versionAdventure=4.2.0
 versionAdventurePlatform=4.0.0-SNAPSHOT
 versionAdventurePagination=4.0.0-SNAPSHOT
 versionMinecraft=1.16.4
-versionLoader=0.10.6+build.214
-versionFabricApi=0.25.1+build.416-1.16
+versionLoader=0.10.8
+versionFabricApi=0.26.3+1.16
 
 org.gradle.jvmargs=-Xmx1G
 org.gradle.caching=true
