--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 versionAdventure=4.7.0
 versionAdventurePlatform=4.0.0-SNAPSHOT
 versionAdventurePagination=4.0.0-SNAPSHOT
-versionMinecraft=1.17-pre3
+versionMinecraft=1.17-rc1
 versionLoader=0.11.3
 versionFabricApi=0.34.8+1.17
 
