--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 versionAdventure=4.8.1
 versionAdventurePlatform=4.0.0-SNAPSHOT
 versionAdventurePagination=4.0.0-SNAPSHOT
-versionMinecraft=1.17-rc1
-versionLoader=0.11.3
-versionFabricApi=0.34.8+1.17
+versionMinecraft=1.17.1
+versionLoader=0.11.6
+versionFabricApi=0.37.0+1.17
 
 org.gradle.jvmargs=-Xmx1G
 org.gradle.caching=true
