start update for 1.18, pretty much just tooling changes here

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 versionAdventure=4.9.3
 versionAdventurePlatform=4.0.0
-versionMinecraft=1.17.1
-versionLoader=0.11.6
-versionFabricApi=0.37.0+1.17
+versionMinecraft=21w43a
+versionLoader=0.12.4
+versionFabricApi=0.41.2+1.18
 
 org.gradle.jvmargs=-Xmx1G
 org.gradle.caching=true
