--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 versionAdventure=4.9.3
 versionAdventurePlatform=4.0.0
-versionMinecraft=21w43a
-versionLoader=0.12.4
-versionFabricApi=0.41.2+1.18
+versionMinecraft=1.18-pre2
+versionLoader=0.12.5
+versionFabricApi=0.42.4+1.18
 
 org.gradle.jvmargs=-Xmx1G
 org.gradle.caching=true
