--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 versionAdventure=4.9.3
 versionAdventurePlatform=4.0.0
-versionMinecraft=1.18-pre8
-versionLoader=0.12.5
-versionFabricApi=0.43.0+1.18
+versionMinecraft=1.18
+versionLoader=0.12.8
+versionFabricApi=0.43.1+1.18
 
 org.gradle.jvmargs=-Xmx1G
 org.gradle.caching=true
