build: Bring in Quiltflower and Parchment
this will improve the quality of the development environment

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,9 @@
 versionAdventure=4.9.3
 versionAdventurePlatform=4.0.0
-versionMinecraft=1.18
-versionLoader=0.12.8
 versionFabricApi=0.43.1+1.18
+versionLoader=0.12.8
+versionMinecraft=1.18
+versionParchment=1.18.1:2021.12.19
 
 org.gradle.jvmargs=-Xmx1G
 org.gradle.caching=true
