--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-versionAdventure=4.9.3
+versionAdventure=4.10.0-SNAPSHOT
 versionAdventurePlatform=4.0.1
 versionColonel=0.2.1
 versionExamination=1.3.0
