--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,9 @@
 versionAdventure=4.9.3
 versionAdventurePlatform=4.0.1
+versionColonel=0.2.1
+versionExamination=1.3.0
 versionFabricApi=0.46.0+1.18
+versionJetbrainsAnnotations=23.0.0
 versionLoader=0.12.12
 versionMinecraft=1.18.1
 versionParchment=1.18.1:2021.12.19
