--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,17 @@
 name: "build"
 
-on: ["pull_request", "push"]
+on:
+  push:
+    branches: "**"
+    tags-ignore: ["**"]
+  pull_request:
+
+concurrency:
+  group: "${{ github.workflow }}-${{ github.event.number || github.ref }}"
+  cancel-in-progress: true
+
+env:
+  RUNTIME_VERSION: 17
 
 jobs:
   build:
@@ -13,15 +24,35 @@ jobs:
     steps:
       - name: "checkout repository"
         uses: "actions/checkout@v2"
-      - name: "setup jdk 17"
-        uses: "actions/setup-java@v1"
+      - name: "setup jdk ${{ env.RUNTIME_VERSION }}"
+        uses: "actions/setup-java@v2"
         with:
-          java-version: "17"
-      - name: "build"
-        run: "./gradlew build"
+          distribution: "temurin"
+          java-version: "${{ env.RUNTIME_VERSION }}"
+      - name: "run gradle build"
+        uses: "gradle/gradle-build-action@v2"
+        with:
+          cache-read-only: "${{ !startsWith(github.ref, 'refs/heads/mc/') || github.event_name == 'pull_request' }}"
+          arguments: "build"
+      - name: "Archive test results"
+        if: "${{ always() }}"
+        uses: "actions/upload-artifact@v2"
+        with:
+          name: "${{ runner.os }}-test-results"
+          path: |
+            build/reports/
+            */build/reports/
+      - name: Determine status
+        if: "${{ runner.os == 'Linux' }}"
+        run: |
+          if [ "$(./gradlew properties | awk '/^version:/ { print $2; }' | grep '\-SNAPSHOT')" ]; then
+            echo "STATUS=snapshot" >> $GITHUB_ENV
+          else
+            echo "STATUS=release" >> $GITHUB_ENV
+          fi
       - name: "publish"
-        if: ${{ runner.os == 'Linux' && github.event_name == 'push' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/heads/mc/')) }}
+        if: "${{ runner.os == 'Linux' && env.STATUS != 'release' && github.event_name == 'push' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/heads/mc/')) }}"
         run: "./gradlew publish"
         env:
-          ORG_GRADLE_PROJECT_sonatypeUsername: ${{ secrets.SONATYPE_USERNAME }}
-          ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.SONATYPE_PASSWORD }}
+          ORG_GRADLE_PROJECT_sonatypeUsername: "${{ secrets.SONATYPE_USERNAME }}"
+          ORG_GRADLE_PROJECT_sonatypePassword: "${{ secrets.SONATYPE_PASSWORD }}"
