--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-versionAdventure=4.10.0-SNAPSHOT
-versionAdventurePlatform=4.0.1
+versionAdventure=4.10.0
+versionAdventurePlatform=4.1.0
 versionColonel=0.2.1
 versionExamination=1.3.0
 versionFabricApi=0.46.0+1.18
