--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,6 @@
-versionAdventure=4.10.0
-versionAdventurePlatform=4.1.0
-versionColonel=0.2.1
-versionExamination=1.3.0
-versionFabricApi=0.47.8+1.18.2
-versionJetbrainsAnnotations=23.0.0
-versionLoader=0.13.3
-versionMinecraft=1.18.2
-versionParchment=1.18.1:2021.12.19
+group=net.kyori
+version=5.2.1-SNAPSHOT
+description=Integration between the adventure library and Minecraft: Java Edition, using the Fabric modding system
 
 org.gradle.jvmargs=-Xmx1G
 org.gradle.caching=true
