--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,10 +6,10 @@ adventure = "4.10.1"
 adventurePlatform = "4.1.0"
 checkstyle = "10.1"
 examination = "1.3.0"
-fabricApi = "0.51.2+1.19"
+fabricApi = "0.52.3+1.19"
 indra = "2.1.1"
-parchment = "1.18.1:2021.12.19"
-quiltflower = "1.8.0"
+parchment = "1.18.2:2022.05.02"
+quiltflower = "1.8.1"
 
 [libraries]
 adventure-api = { module = "net.kyori:adventure-api", version.ref = "adventure" }
@@ -24,7 +24,7 @@ examination-string = { module = "net.kyori:examination-string", version.ref = "e
 fabric-loader = "net.fabricmc:fabric-loader:0.14.5"
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabricApi" }
 jetbrainsAnnotations = "org.jetbrains:annotations:23.0.0"
-minecraft = "com.mojang:minecraft:22w16b"
+minecraft = "com.mojang:minecraft:22w19a"
 
 # build
 contractValidator = "ca.stellardrift:contract-validator:1.0.1"
@@ -37,7 +37,7 @@ zQuiltflower = { module = "org.quiltmc:quiltflower", version.ref = "quiltflower"
 [plugins]
 configurateTransformations = "ca.stellardrift.configurate-transformations:5.0.1"
 loom = "fabric-loom:0.11.+"
-loomQuiltflower = "io.github.juuxel.loom-quiltflower:1.7.1"
+loomQuiltflower = "io.github.juuxel.loom-quiltflower:1.7.2"
 ideaExt = "org.jetbrains.gradle.plugin.idea-ext:1.1.4"
 indra = { id = "net.kyori.indra", version.ref = "indra" }
 indra-licenseHeader = { id = "net.kyori.indra.license-header", version.ref = "indra" }
