Make SoundEvents and ResourceKeys Keyed

--- a/src/main/resource-templates/fabric.mod.yaml
+++ b/src/main/resource-templates/fabric.mod.yaml
@@ -30,6 +30,8 @@ custom:
     net/minecraft/class_746: [ net/kyori/adventure/audience/Audience ] # net/minecraft/client/player/LocalPlayer
     net/minecraft/class_2561: [ net/kyori/adventure/text/ComponentLike ] # net/minecraft/network/chat/Component
     net/minecraft/class_2960: [ net/kyori/adventure/key/Key ] # net/minecraft/resources/ResourceLocation
+    net/minecraft/class_3414: [ net/kyori/adventure/sound/Sound<%= '$' %>Type ] # net/minecraft/sounds/SoundEvent
+    net/minecraft/class_5321: [ net/kyori/adventure/key/Keyed ] # net/minecraft/resources/ResourceKey
 
 depends:
   fabricloader: ">=0.4.0"
