--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 version = "1.0"
 
 [versions]
-adventure = "4.10.1"
+adventure = "4.11.0-SNAPSHOT"
 adventurePlatform = "4.1.0"
 checkstyle = "10.1"
 examination = "1.3.0"
@@ -10,14 +10,17 @@ fabricApi = "0.51.1+1.18.2"
 indra = "2.1.1"
 parchment = "1.18.1:2021.12.19"
 quiltflower = "1.8.0"
+slf4j = "1.8.0-beta4"
 
 [libraries]
 adventure-api = { module = "net.kyori:adventure-api", version.ref = "adventure" }
 adventure-key = { module = "net.kyori:adventure-key", version.ref = "adventure" }
 adventure-platform-api = { module = "net.kyori:adventure-platform-api", version.ref = "adventurePlatform" }
+adventure-textLoggerSlf4j = { module = "net.kyori:adventure-text-logger-slf4j", version.ref = "adventure" }
+adventure-textMinimessage = { module = "net.kyori:adventure-text-minimessage", version.ref = "adventure" }
 adventure-textSerializerPlain = { module = "net.kyori:adventure-text-serializer-plain", version.ref = "adventure" }
 adventure-textSerializerGson = { module = "net.kyori:adventure-text-serializer-gson", version.ref = "adventure" }
-adventure-textMinimessage = { module = "net.kyori:adventure-text-minimessage", version.ref = "adventure" }
+
 colonel = "ca.stellardrift:colonel:0.2.2"
 examination-api = { module = "net.kyori:examination-api", version.ref = "examination" }
 examination-string = { module = "net.kyori:examination-string", version.ref = "examination" }
@@ -25,6 +28,7 @@ fabric-loader = "net.fabricmc:fabric-loader:0.14.5"
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabricApi" }
 jetbrainsAnnotations = "org.jetbrains:annotations:23.0.0"
 minecraft = "com.mojang:minecraft:1.18.2"
+slf4j-ext = { module = "org.slf4j:slf4j-ext", version.ref = "slf4j" }
 
 # build
 contractValidator = "ca.stellardrift:contract-validator:1.0.1"
