--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ version = "1.0"
 [versions]
 adventure = "4.10.1"
 adventurePlatform = "4.1.0"
+autoService = "1.0.1"
 checkstyle = "10.1"
 examination = "1.3.0"
 fabricApi = "0.53.4+1.19"
@@ -27,6 +28,8 @@ jetbrainsAnnotations = "org.jetbrains:annotations:23.0.0"
 minecraft = "com.mojang:minecraft:1.19-pre4"
 
 # build
+autoService = { module = "com.google.auto.service:auto-service", version.ref = "autoService" }
+autoService-annotations = { module = "com.google.auto.service:auto-service-annotations", version.ref = "autoService" }
 contractValidator = "ca.stellardrift:contract-validator:1.0.1"
 stylecheck = "ca.stellardrift:stylecheck:0.1"
 
@@ -36,6 +39,7 @@ zQuiltflower = { module = "org.quiltmc:quiltflower", version.ref = "quiltflower"
 
 [plugins]
 configurateTransformations = "ca.stellardrift.configurate-transformations:5.0.1"
+eclipseApt = "com.diffplug.eclipse.apt:3.36.2"
 loom = "fabric-loom:0.12.+"
 loomQuiltflower = "io.github.juuxel.loom-quiltflower:1.7.2"
 ideaExt = "org.jetbrains.gradle.plugin.idea-ext:1.1.4"
