--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group=net.kyori
-version=5.3.0-SNAPSHOT
+version=5.3.0
 description=Integration between the adventure library and Minecraft: Java Edition, using the Fabric modding system
 
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 org.gradle.caching=true
 org.gradle.parallel=true
