--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,11 +47,33 @@ jobs:
       - name: Determine status
         if: "${{ runner.os == 'Linux' }}"
         run: |
-          if [ "$(./gradlew properties | awk '/^version:/ { print $2; }' | grep '\-SNAPSHOT')" ]; then
+          VERSION="$(./gradlew properties | awk '/^version:/ { print $2; }')"
+          if [ "$(echo $VERSION | grep '\-SNAPSHOT')" ]; then
             echo "STATUS=snapshot" >> $GITHUB_ENV
           else
             echo "STATUS=release" >> $GITHUB_ENV
           fi
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+      - name: "Execute production test run"
+        shell: bash
+        run: |
+          pip install yq
+          mkdir -p testserver/mods
+          MC_VERSION="$(tomlq -r '.versions.minecraft' gradle/libs.versions.toml)"
+          LOADER_VERSION="$(tomlq -r '.versions.fabricLoader' gradle/libs.versions.toml)"
+          API_VERSION="$(tomlq -r '.versions.fabricApi' gradle/libs.versions.toml)"
+          # Download fabric server launch
+          curl https://meta.fabricmc.net/v2/versions/loader/$MC_VERSION/$LOADER_VERSION/0.11.0/server/jar -o testserver/fabric-server.jar
+          # eula=true
+          echo "eula=true" > testserver/eula.txt
+          # copy artifact into mods folder
+          cp build/libs/adventure-platform-fabric-$VERSION.jar testserver/mods/adventure-platform-fabric.jar
+          # copy API
+          API_URL=$(curl https://api.modrinth.com/v2/project/fabric-api/version | jq ". | map(select(.version_number == \"$API_VERSION\")) | .[0].files[0].url" -r)
+          curl "$API_URL" -o testserver/mods/fabric-api.jar
+          pushd testserver/
+          java -Dadventure.testMode=true fabric-server.jar nogui
+          popd
       - name: "publish"
         if: "${{ runner.os == 'Linux' && env.STATUS != 'release' && github.event_name == 'push' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/heads/mc/')) }}"
         run: "./gradlew publish"
