--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,9 @@ adventurePlatform = "4.1.0"
 checkstyle = "10.1"
 examination = "1.3.0"
 fabricApi = "0.51.1+1.18.2"
+fabricLoader = "0.14.6"
 indra = "2.1.1"
+minecraft = "1.18.2"
 parchment = "1.18.1:2021.12.19"
 quiltflower = "1.8.0"
 
@@ -23,10 +25,10 @@ adventure-textSerializerGson = { module = "net.kyori:adventure-text-serializer-g
 colonel = "ca.stellardrift:colonel:0.2.2"
 examination-api = { module = "net.kyori:examination-api", version.ref = "examination" }
 examination-string = { module = "net.kyori:examination-string", version.ref = "examination" }
-fabric-loader = "net.fabricmc:fabric-loader:0.14.6"
+fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "fabricLoader"}
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabricApi" }
 jetbrainsAnnotations = "org.jetbrains:annotations:23.0.0"
-minecraft = "com.mojang:minecraft:1.18.2"
+minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
 
 # build
 contractValidator = "ca.stellardrift:contract-validator:1.0.1"
