--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,8 @@ jobs:
           cp build/libs/adventure-platform-fabric-$VERSION.jar testserver/mods/adventure-platform-fabric.jar
           # copy API
           API_URL=$(curl https://api.modrinth.com/v2/project/fabric-api/version | jq ". | map(select(.version_number == \"$API_VERSION\")) | .[0].files[0].url" -r)
-          curl "$API_URL" -o testserver/mods/fabric-api.jar
+          echo "Downloading Fabric API from $API_URL"
+          curl -L "$API_URL" -o testserver/mods/fabric-api.jar
           pushd testserver/
           java -Dadventure.testMode=true -jar fabric-server.jar nogui
           popd
