--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,8 +92,10 @@ jobs:
           fi
           popd
           echo "::endgroup" # Server Execution
-          
-          echo "# Server Execution\n\n$(cat testserver/logs/latest.log)" >> $GITHUB_STEP_SUMMARY
+          echo "# Server Execution" >> $GITHUB_STEP_SUMMARY
+          echo "```" >> $GITHUB_STEP_SUMMARY
+          cat testserver/logs/latest.log >> $GITHUB_STEP_SUMMARY
+          echo "```" >> $GITHUB_STEP_SUMMARY
       - name: "publish"
         if: "${{ runner.os == 'Linux' && env.STATUS != 'release' && github.event_name == 'push' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/heads/mc/')) }}"
         run: "./gradlew publish"
