--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,10 +7,10 @@ adventurePlatform = "4.1.0"
 autoService = "1.0.1"
 checkstyle = "10.1"
 examination = "1.3.0"
-fabricApi = "0.54.0+1.19"
+fabricApi = "0.55.1+1.19"
 fabricLoader = "0.14.6"
 indra = "2.1.1"
-minecraft = "1.19-pre5"
+minecraft = "1.19-rc2"
 parchment = "1.18.2:2022.05.02"
 quiltflower = "1.8.1"
 
