--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 version = "1.0"
 
 [versions]
-adventure = "4.11.0"
+adventure = "4.12.0-SNAPSHOT"
 adventurePlatform = "4.1.2"
 autoService = "1.0.1"
 checkstyle = "10.4"
