--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,10 +7,10 @@ adventurePlatform = "4.1.0"
 autoService = "1.0.1"
 checkstyle = "10.1"
 examination = "1.3.0"
-fabricApi = "0.55.1+1.19"
-fabricLoader = "0.14.6"
+fabricApi = "0.56.0+1.19"
+fabricLoader = "0.14.8"
 indra = "2.1.1"
-minecraft = "1.19-rc2"
+minecraft = "1.19"
 parchment = "1.18.2:2022.05.02"
 quiltflower = "1.8.1"
 
@@ -44,7 +44,7 @@ zQuiltflower = { module = "org.quiltmc:quiltflower", version.ref = "quiltflower"
 configurateTransformations = "ca.stellardrift.configurate-transformations:5.0.1"
 eclipseApt = "com.diffplug.eclipse.apt:3.36.2"
 loom = "fabric-loom:0.12.+"
-loomQuiltflower = "io.github.juuxel.loom-quiltflower:1.7.2"
+loomQuiltflower = "io.github.juuxel.loom-quiltflower:1.7.3"
 ideaExt = "org.jetbrains.gradle.plugin.idea-ext:1.1.4"
 indra = { id = "net.kyori.indra", version.ref = "indra" }
 indra-licenseHeader = { id = "net.kyori.indra.license-header", version.ref = "indra" }
