--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # Gradle
 .gradle/
-build/
-run/
+/build/
+/run/
+/*/build/
+/*/run/
 
 # IntelliJ
 
@@ -15,6 +17,10 @@ run/
 /.factorypath
 /bin/
 *.launch
+/*/.settings/
+/*/.classpath
+/*/.factorypath
+/*/bin/
 
 # macOS
 
@@ -22,3 +28,5 @@ run/
 
 # CI test server
 testserver/
+/.apt_generated/
+/.apt_generated_tests/
