--- a/fabric/src/main/resource-templates/fabric.mod.yaml
+++ b/fabric/src/main/resource-templates/fabric.mod.yaml
@@ -1,7 +1,7 @@
 schemaVersion: 1
-id: "${project.rootProject.name.toLowerCase()}"
+id: "${project.name.toLowerCase()}"
 version: "${project.version}"
-name: "${project.rootProject.name}"
+name: "${project.name}"
 authors: [ "kashike","zml", "Luck", "Electroid" ]
 contact:
   homepage: "https://github.com/KyoriPowered/adventure-platform-fabric"
@@ -11,7 +11,7 @@ license: "MIT"
 
 entrypoints:
   main:
-    - "net.kyori.adventure.platform.fabric.impl.AdventureCommon"
+    - "net.kyori.adventure.platform.fabric.impl.AdventureFabricCommon"
   client:
     - "net.kyori.adventure.platform.fabric.impl.client.AdventureClient"
   adventure-internal:sidedproxy/client:
