--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
   alias(libs.plugins.indra.checkstyle) apply false // needed for Gradle dependency resolution
   alias(libs.plugins.indra.sonatype)
   alias(libs.plugins.ideaExt)
-  alias(libs.plugins.loom)
+  alias(libs.plugins.loom) apply false
   alias(libs.plugins.loomQuiltflower) apply false
 }
 
@@ -74,7 +74,6 @@ allprojects {
   // Loom-specific
   plugins.withId('fabric-loom') {
     dependencies {
-      println "Minecraft dep: ${libs.minecraft} (in project ${project.name})"
       minecraft(libs.minecraft)
       mappings(loom.layered {
         officialMojangMappings()
