--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ checkstyle = "10.1"
 examination = "1.3.0"
 fabricApi = "0.56.0+1.19"
 fabricLoader = "0.14.8"
-forge = "1.19-41.0.38"
+forge = "1.19-41.0.39-tab-list"
 indra = "2.1.1"
 minecraft = "1.19"
 parchment = "1.18.2:2022.05.02"
