--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,10 +9,11 @@ checkstyle = "10.3.3"
 examination = "1.3.0"
 fabricApi = "0.60.0+1.19.2"
 fabricLoader = "0.14.9"
-indra = "2.1.1"
+indra = "2.2.0"
 minecraft = "1.19.2"
 parchment = "1.19.2:2022.09.04"
 quiltflower = "1.8.1"
+spotless = "6.11.0"
 
 [libraries]
 adventure-api = { module = "net.kyori:adventure-api", version.ref = "adventure" }
@@ -47,6 +48,7 @@ loom = "fabric-loom:0.12.+"
 loomQuiltflower = "io.github.juuxel.loom-quiltflower:1.7.3"
 ideaExt = "org.jetbrains.gradle.plugin.idea-ext:1.1.6"
 indra = { id = "net.kyori.indra", version.ref = "indra" }
-indra-licenseHeader = { id = "net.kyori.indra.license-header", version.ref = "indra" }
+indra-licenseHeader = { id = "net.kyori.indra.licenser.spotless", version.ref = "indra" }
 indra-checkstyle = { id = "net.kyori.indra.checkstyle", version.ref = "indra" }
 indra-sonatype = { id = "net.kyori.indra.publishing.sonatype", version.ref = "indra" }
+spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
