--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,10 +7,10 @@ adventurePlatform = "4.1.2"
 autoService = "1.0.1"
 checkstyle = "10.4"
 examination = "1.3.0"
-fabricApi = "0.67.3+1.19.3"
-fabricLoader = "0.14.10"
+fabricApi = "0.68.1+1.19.3"
+fabricLoader = "0.14.11"
 indra = "3.0.1"
-minecraft = "1.19.3-pre2"
+minecraft = "1.19.3-rc1"
 parchment = "1.19.2:2022.11.27"
 quiltflower = "1.9.0"
 spotless = "6.12.0"
