chore: Configure javadoc to be publication-ready
Closes GH-59

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -50,5 +50,6 @@ ideaExt = "org.jetbrains.gradle.plugin.idea-ext:1.1.7"
 indra = { id = "net.kyori.indra", version.ref = "indra" }
 indra-licenseHeader = { id = "net.kyori.indra.licenser.spotless", version.ref = "indra" }
 indra-checkstyle = { id = "net.kyori.indra.checkstyle", version.ref = "indra" }
+indra-crossdoc = { id = "net.kyori.indra.crossdoc", version.ref = "indra" }
 indra-sonatype = { id = "net.kyori.indra.publishing.sonatype", version.ref = "indra" }
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
