--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,12 +5,12 @@ version = "1.0"
 adventure = "4.12.0"
 adventurePlatform = "4.1.2"
 autoService = "1.0.1"
-checkstyle = "10.4"
+checkstyle = "10.5.0"
 examination = "1.3.0"
 fabricApi = "0.68.1+1.19.3"
 fabricLoader = "0.14.11"
 indra = "3.0.1"
-minecraft = "1.19.3-rc1"
+minecraft = "1.19.3"
 parchment = "1.19.2:2022.11.27"
 quiltflower = "1.9.0"
 spotless = "6.12.0"
