--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group=net.kyori
-version=5.6.1-SNAPSHOT
+version=5.6.1
 description=Integration between the adventure library and Minecraft: Java Edition, using the Fabric modding system
 
 javadocPublishRoot=https://jd.adventure.kyori.net/platform/
