--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,8 @@ jobs:
     steps:
       - name: "checkout repository"
         uses: "actions/checkout@v3"
+        with:
+          fetch-depth: 0
       - name: "setup jdk ${{ env.RUNTIME_VERSION }}"
         uses: "actions/setup-java@v3"
         with:
