--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,11 +7,11 @@ adventurePlatform = "4.2.0"
 autoService = "1.0.1"
 checkstyle = "10.8.0"
 examination = "1.3.0"
-fabricApi = "0.75.1+1.19.3"
-fabricLoader = "0.14.12"
+fabricApi = "0.73.5+1.19.4"
+fabricLoader = "0.14.14"
 indra = "3.0.1"
-minecraft = "1.19.3"
-parchment = "1.19.3:2023.03.12"
+minecraft = "23w06a"
+parchment = "1.19.3:2023.03.012"
 quiltflower = "1.9.0"
 spotless = "6.16.0"
 
