--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ group=net.kyori
 version=5.6.2-SNAPSHOT
 description=Integration between the adventure library and Minecraft: Java Edition, using the Fabric modding system
 
-javadocPublishRoot=https://jd.adventure.kyori.net/platform/
+javadocPublishRoot=https://jd.advntr.dev/platform/
 
 org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
