--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ examination = "1.3.0"
 fabricApi = "0.75.1+1.19.4"
 fabricLoader = "0.14.17"
 indra = "3.0.1"
-minecraft = "1.19.4-pre2"
+minecraft = "1.19.4-rc1"
 parchment = "1.19.3:2023.03.12"
 quiltflower = "1.9.0"
 spotless = "6.16.0"
