--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,10 +7,10 @@ adventurePlatform = "4.3.0"
 autoService = "1.1.1"
 checkstyle = "10.12.1"
 examination = "1.3.0"
-fabricApi = "0.77.0+1.19.4"
+fabricApi = "0.77.1+1.20"
 fabricLoader = "0.14.19"
 indra = "3.1.2"
-minecraft = "1.19.4"
+minecraft = "23w14a"
 parchment = "1.19.3:2023.03.12"
 vineflower = "1.9.1"
 spotless = "6.19.0"
