--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,9 +8,9 @@ autoService = "1.0.1"
 checkstyle = "10.9.3"
 examination = "1.3.0"
 fabricApi = "0.75.1+1.19.4"
-fabricLoader = "0.14.17"
+fabricLoader = "0.14.19"
 indra = "3.0.1"
-minecraft = "1.19.4-rc3"
+minecraft = "1.19.4"
 parchment = "1.19.3:2023.03.12"
 quiltflower = "1.9.0"
 spotless = "6.17.0"
