--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group=net.kyori
-version=5.5.1
+version=5.5.2-SNAPSHOT
 description=Integration between the adventure library and Minecraft: Java Edition, using the Fabric modding system
 
 org.gradle.jvmargs=-Xmx2G
