--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ version = "1.0"
 [versions]
 adventure = "4.14.0"
 adventurePlatform = "4.3.0"
+ansi = "1.0.0"
 autoService = "1.1.1"
 checkstyle = "10.12.1"
 examination = "1.3.0"
@@ -26,6 +27,7 @@ adventure-textSerializerGson = { module = "net.kyori:adventure-text-serializer-g
 adventure-textSerializerJson = { module = "net.kyori:adventure-text-serializer-json", version.ref = "adventure" }
 adventure-textSerializerAnsi = { module = "net.kyori:adventure-text-serializer-ansi", version.ref = "adventure" }
 
+ansi = { module = "net.kyori:ansi", version.ref = "ansi" }
 examination-api = { module = "net.kyori:examination-api", version.ref = "examination" }
 examination-string = { module = "net.kyori:examination-string", version.ref = "examination" }
 fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "fabricLoader"}
