--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 version = "1.0"
 
 [versions]
-adventure = "4.13.1"
+adventure = "4.14.0"
 adventurePlatform = "4.3.0"
 autoService = "1.1.0"
 checkstyle = "10.12.0"
@@ -23,6 +23,7 @@ adventure-textLoggerSlf4j = { module = "net.kyori:adventure-text-logger-slf4j", 
 adventure-textMinimessage = { module = "net.kyori:adventure-text-minimessage", version.ref = "adventure" }
 adventure-textSerializerPlain = { module = "net.kyori:adventure-text-serializer-plain", version.ref = "adventure" }
 adventure-textSerializerGson = { module = "net.kyori:adventure-text-serializer-gson", version.ref = "adventure" }
+adventure-textSerializerJson = { module = "net.kyori:adventure-text-serializer-json", version.ref = "adventure" }
 
 examination-api = { module = "net.kyori:examination-api", version.ref = "examination" }
 examination-string = { module = "net.kyori:examination-string", version.ref = "examination" }
