--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,11 +7,11 @@ adventurePlatform = "4.3.0"
 autoService = "1.1.1"
 checkstyle = "10.12.1"
 examination = "1.3.0"
-fabricApi = "0.82.1+1.20"
+fabricApi = "0.85.0+1.20.1"
 fabricLoader = "0.14.21"
 indra = "3.1.2"
-minecraft = "1.20-pre6"
-parchment = "1.19.3:2023.03.12"
+minecraft = "1.20.1"
+parchment = "1.20.1:2023.07.16"
 vineflower = "1.9.1"
 spotless = "6.19.0"
 
@@ -44,15 +44,9 @@ zVineflower = { module = "org.vineflower:vineflower", version.ref = "vineflower"
 
 [plugins]
 configurateTransformations = "ca.stellardrift.configurate-transformations:6.0.1"
-<<<<<<< HEAD
 eclipseApt = "com.diffplug.eclipse.apt:3.42.2"
-loom = "fabric-loom:1.1.+"
+loom = "fabric-loom:1.3.8"
 loomVineflower = "io.github.juuxel.loom-vineflower:1.11.0"
-=======
-eclipseApt = "com.diffplug.eclipse.apt:3.41.1"
-loom = "fabric-loom:1.2.+"
-loomQuiltflower = "io.github.juuxel.loom-quiltflower:1.8.0"
->>>>>>> 994023a (1.20-pre1)
 ideaExt = "org.jetbrains.gradle.plugin.idea-ext:1.1.7"
 indra = { id = "net.kyori.indra", version.ref = "indra" }
 indra-licenseHeader = { id = "net.kyori.indra.licenser.spotless", version.ref = "indra" }
