--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,12 +8,12 @@ ansi = "1.0.3"
 autoService = "1.1.1"
 checkstyle = "10.12.3"
 examination = "1.3.0"
-fabricApi = "0.85.0+1.20.1"
-fabricLoader = "0.14.21"
+fabricApi = "0.88.2+1.20.2"
+fabricLoader = "0.14.22"
 indra = "3.1.3"
-minecraft = "1.20.1"
-parchment = "1.20.1:2023.07.16"
-vineflower = "1.9.2"
+minecraft = "1.20.2-pre1"
+parchment = "1.20.1:2023.09.03"
+vineflower = "1.9.3"
 spotless = "6.21.0"
 
 [libraries]
