--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,10 +8,10 @@ ansi = "1.0.3"
 autoService = "1.1.1"
 checkstyle = "10.12.3"
 examination = "1.3.0"
-fabricApi = "0.89.0+1.20.2"
+fabricApi = "0.89.1+1.20.2"
 fabricLoader = "0.14.22"
 indra = "3.1.3"
-minecraft = "1.20.2-rc2"
+minecraft = "1.20.2"
 parchment = "1.20.1:2023.09.03"
 vineflower = "1.9.3"
 spotless = "6.21.0"
