--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ examination = "1.3.0"
 fabricApi = "0.89.1+1.20.2"
 fabricLoader = "0.14.22"
 indra = "3.1.3"
+junit = "5.10.0"
 minecraft = "1.20.2"
 parchment = "1.20.1:2023.09.03"
 vineflower = "1.9.3"
@@ -31,6 +32,7 @@ ansi = { module = "net.kyori:ansi", version.ref = "ansi" }
 examination-api = { module = "net.kyori:examination-api", version.ref = "examination" }
 examination-string = { module = "net.kyori:examination-string", version.ref = "examination" }
 fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "fabricLoader"}
+fabric-loader-junit = { module = "net.fabricmc:fabric-loader-junit", version.ref = "fabricLoader"}
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabricApi" }
 fabric-permissionsApi = { module = "me.lucko:fabric-permissions-api", version = "0.2-SNAPSHOT" }
 jetbrainsAnnotations = "org.jetbrains:annotations:24.0.1"
@@ -40,6 +42,11 @@ minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
 autoService = { module = "com.google.auto.service:auto-service", version.ref = "autoService" }
 autoService-annotations = { module = "com.google.auto.service:auto-service-annotations", version.ref = "autoService" }
 contractValidator = "ca.stellardrift:contract-validator:1.0.1"
+junit-api = { module = "org.junit.jupiter:junit-jupiter-api" }
+junit-bom = { module = "org.junit:junit-bom", version.ref = "junit" }
+junit-engine = { module = "org.junit.jupiter:junit-jupiter-engine" }
+junit-launcher = { module = "org.junit.platform:junit-platform-launcher" }
+junit-params = { module = "org.junit.jupiter:junit-jupiter-params" }
 stylecheck = "ca.stellardrift:stylecheck:0.2.1"
 vineflower = { module = "org.vineflower:vineflower", version.ref = "vineflower" }
 
