--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group=net.kyori
-version=5.10.1
+version=5.10.2-SNAPSHOT
 description=Integration between the adventure library and Minecraft: Java Edition, using the Fabric modding system
 
 javadocPublishRoot=https://jd.advntr.dev/platform/
