--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,12 +8,12 @@ ansi = "1.0.3"
 autoService = "1.1.1"
 checkstyle = "10.12.5"
 examination = "1.3.0"
-fabricApi = "0.90.9+1.20.3"
-fabricLoader = "0.14.24"
+fabricApi = "0.91.1+1.20.3"
+fabricLoader = "0.15.0"
 indra = "3.1.3"
 junit = "5.10.1"
-minecraft = "23w46a"
-parchment = "1.20.2:2023.10.08"
+minecraft = "1.20.3"
+parchment = "1.20.2:2023.10.22"
 vineflower = "1.9.3"
 spotless = "6.21.0"
 
