--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,12 +8,12 @@ ansi = "1.0.3"
 autoService = "1.1.1"
 checkstyle = "10.12.7"
 examination = "1.3.0"
-fabricApi = "0.91.1+1.20.3"
-fabricLoader = "0.15.0"
+fabricApi = "0.94.0+1.20.4"
+fabricLoader = "0.15.5"
 indra = "3.1.3"
 junit = "5.10.1"
-minecraft = "1.20.3"
-parchment = "1.20.2:2023.10.22"
+minecraft = "1.20.4"
+parchment = "1.20.3:2023.12.31"
 vineflower = "1.9.3"
 spotless = "6.21.0"
 
@@ -34,7 +34,12 @@ examination-string = { module = "net.kyori:examination-string", version.ref = "e
 fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "fabricLoader"}
 fabric-loader-junit = { module = "net.fabricmc:fabric-loader-junit", version.ref = "fabricLoader"}
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabricApi" }
-fabric-permissionsApi = { module = "me.lucko:fabric-permissions-api", version = "0.2-SNAPSHOT" }
+fabric-api-bom = { module = "net.fabricmc.fabric-api:fabric-api-bom", version.ref = "fabricApi" }
+fabric-api-base = { module = "net.fabricmc.fabric-api:fabric-api-base" }
+fabric-api-networking = { module = "net.fabricmc.fabric-api:fabric-networking-api-v1" }
+fabric-api-command = { module = "net.fabricmc.fabric-api:fabric-command-api-v2" }
+fabric-api-lifecycle = { module = "net.fabricmc.fabric-api:fabric-lifecycle-events-v1" }
+fabric-permissionsApi = { module = "me.lucko:fabric-permissions-api", version = "0.3-SNAPSHOT" }
 jetbrainsAnnotations = "org.jetbrains:annotations:24.1.0"
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
 option = { module = "net.kyori:option", version = "1.0.0" }
@@ -57,7 +62,7 @@ zCheckstyle = { module = "com.puppycrawl.tools:checkstyle", version.ref = "check
 [plugins]
 configurateTransformations = "ca.stellardrift.configurate-transformations:6.1.0"
 eclipseApt = "com.diffplug.eclipse.apt:3.42.2"
-loom = "fabric-loom:1.4.4"
+loom = "fabric-loom:1.5.6"
 ideaExt = "org.jetbrains.gradle.plugin.idea-ext:1.1.7"
 indra = { id = "net.kyori.indra", version.ref = "indra" }
 indra-licenseHeader = { id = "net.kyori.indra.licenser.spotless", version.ref = "indra" }
