--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,11 +8,11 @@ ansi = "1.0.3"
 autoService = "1.1.1"
 checkstyle = "10.14.0"
 examination = "1.3.0"
-fabricApi = "0.94.0+1.20.4"
-fabricLoader = "0.15.5"
+fabricApi = "0.94.0+1.20.5"
+fabricLoader = "0.15.6"
 indra = "3.1.3"
 junit = "5.10.2"
-minecraft = "1.20.4"
+minecraft = "24w03b"
 parchment = "1.20.3:2023.12.31"
 vineflower = "1.9.3"
 spotless = "6.25.0"
