--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,11 +8,11 @@ ansi = "1.0.3"
 autoService = "1.1.1"
 checkstyle = "10.14.0"
 examination = "1.3.0"
-fabricApi = "0.97.3+1.20.5"
-fabricLoader = "0.15.9"
+fabricApi = "0.97.5+1.20.5"
+fabricLoader = "0.15.10"
 indra = "3.1.3"
 junit = "5.10.2"
-minecraft = "1.20.5-rc1"
+minecraft = "1.20.5"
 parchment = "1.20.4:2024.04.14"
 vineflower = "1.10.1"
 spotless = "6.25.0"
@@ -62,7 +62,7 @@ zCheckstyle = { module = "com.puppycrawl.tools:checkstyle", version.ref = "check
 [plugins]
 configurateTransformations = "ca.stellardrift.configurate-transformations:6.1.0"
 eclipseApt = "com.diffplug.eclipse.apt:3.44.0"
-loom = "fabric-loom:1.6.10"
+loom = "fabric-loom:1.6.11"
 ideaExt = "org.jetbrains.gradle.plugin.idea-ext:1.1.8"
 indra = { id = "net.kyori.indra", version.ref = "indra" }
 indra-licenseHeader = { id = "net.kyori.indra.licenser.spotless", version.ref = "indra" }
