--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,11 +8,11 @@ ansi = "1.0.3"
 autoService = "1.1.1"
 checkstyle = "10.16.0"
 examination = "1.3.0"
-fabricApi = "0.98.0+1.20.6"
+fabricApi = "0.99.1+1.21"
 fabricLoader = "0.15.11"
 indra = "3.1.3"
 junit = "5.10.2"
-minecraft = "1.20.6"
+minecraft = "24w21b"
 parchment = "1.20.6:2024.05.01"
 vineflower = "1.10.1"
 spotless = "6.25.0"
